src/components/nav/Nav.css
.nav {
  position: absolute;
  width: 100%;
  z-index: 9999;
}

.nav li {
  width: 10%;
}

.nav-header {
  width: 100%;
  max-height: 100px;
  background-image: url("../../images/header-banner.jpg");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.nav-header .nav-header-title {
  margin: 0;
  padding: 0;
  color: white;
  font-family: Courier;
  font-size: 24px;
  font-weight: 600;
}

.nav-header .nav-header-title:hover {
  text-decoration: none;
}

.nav-header .nav-header-title img {
  margin: 10px;
  width: 80px;
}

.nav-search {
  height: 50px;
  background-color: lightblue;
}

